# cYandexDisk

./: .cYandexDisk.c.un~  .gitignore  .gitmodules  CMakeLists.txt  ChangeLog  Makefile  Makefile.am  Readme.md  alloc.h  cYandexDisk.c  cYandexDisk.h  cYandexOAuth.c  cYandexOAuth.h  config.c  config.h  configure.ac  log.h  sqlite2yandexdisk.c  str.h  strptime.cc  test.c  uuid4.h
cmake/: .i386-pc-mingw32.cmake.un~
cygwin/info/: configure.info  configure.info-1  libc.info-1  standards.info
vc6/: cYandexDisk.def  cYandexDisk.dsp  cYandexDisk.dsw
win32/curl/: CHANGES.txt
win32/curl/lib/: bcrypt.cpp  bcrypt.exp  bcrypt.lib
win32/cygwin/include/: newlib.h
win32/cygwin/info/: libc.info  libm.info
